--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "chart.js": "^3.3.2",
+    "d3": "^6.7.0",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-circular-progressbar": "^2.0.4",
+    "react-countdown": "^2.3.2",
     "react-digital-clock": "^0.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "reactjs-popup": "^2.0.4",
+    "react-time-picker": "^4.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
