--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,12 +17,12 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-circular-progressbar": "^2.0.4",
-    "react-countdown": "^2.3.2",
     "react-digital-clock": "^0.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-time-picker": "^4.3.0",
+    "sweetalert2": "^11.0.16",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
